fixes with expanded vault on mobile

--- a/src/components/Vault/VaultExpanded/VaultExpanded.scss
+++ b/src/components/Vault/VaultExpanded/VaultExpanded.scss
@@ -1,4 +1,4 @@
-@import 'styles/constants.scss';
+@import "styles/constants.scss";
 
 .vault-expanded {
   display: flex;
@@ -185,7 +185,7 @@
     }
 
     .twitter-avatars-wrapper {
-      flex-wrap: unset;
+      row-gap: 15px;
       min-height: unset;
       overflow: auto;
       white-space: nowrap;
